unpackaged/main/default/objects/Foot_Traffic__c/Foot_Traffic__c.object-meta.xml
<CustomObject>
    <label>Foot Traffic Entry</label>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foot Traffic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>