unpackaged/main/default/objects/Foot_Traffic__c/fields/Be_back_Visits__c.field-meta.xml
<CustomField>
        <fullName>Be_back_Visits__c</fullName>
        <label>Be-back Visits</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>