unpackaged/main/default/objects/Foot_Traffic__c/fields/First_time_visits__c.field-meta.xml
<CustomField>
        <fullName>First_time_visits__c</fullName>
        <label>First-time visits</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>