unpackaged/main/default/objects/Foot_Traffic__c/fields/Subdivision__c.field-meta.xml
<CustomField>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subdivision</label>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Foot Traffic</relationshipLabel>
        <relationshipName>Foot_Traffic</relationshipName>
        <type>Lookup</type>
    </CustomField>