unpackaged/main/default/objects/Foot_Traffic__c/fields/Traffic_Date__c.field-meta.xml
<CustomField>
        <fullName>Traffic_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Traffic Date</label>
        <required>true</required>
        <type>Date</type>
    </CustomField>